* 新增:     01.新增 DecSpaceMap 可以将多个Map合并成一个Map对象给予操作,每个子map可以通过一个空间字符串进行标识。     02.AbstractSettings 类增加 resetValues 方法,可以通过 UpdateValue 接口更新载入的配置文件数据,一个典型的应用场景是模版化配置文件。     03.支持配置文件模版化,通过模版化的配置文件。可以在不修改部署包的前提下,替换配置文件的值。使其可以方便的适用于各种环境,例如:日常、预发、线上、隔离。     04.新增 @InjectSettings 注解,支持配置文件数据注入。 * 改进:     01.配置文件加载在原有xml格式下新增 "属性类型" 文件的加载支持，属性文件默认采用UTF-8编码方式读取。     02.Settings 接口的两个 findClass 方法移动到 Environment 接口中,Settings的职责更佳明确,只负责配置文件相关的操作。     03.删除 AbstractMergeSettings 不在需要该类承担数据的职责,Settings的数据承载交给 DecSpaceMap。     04.Settings 小范围重构,内部的数据管理更佳清晰。